# hpp-rbprm-corba

./: CMakeLists.txt  README.md
data/meshes/: hrp2_trunk_torso.stl  race_0.stl  race_1.stl  race_2.stl  race_3.stl  race_3_ramp.stl
data/srdf/: race_0.srdf  race_1.srdf  race_2.srdf  race_3.srdf  race_3_ramp.srdf
data/urdf/: race_0.urdf  race_1.urdf  race_2.urdf  race_3.urdf  race_3_ramp.urdf
data/urdf/hyq/: hyq_trunk_large.urdf
idl/hpp/corbaserver/rbprm/: rbprmbuilder.idl
plugins/: CMakeLists.txt
plugins/hpprbprmplugin/: CMakeLists.txt  hpprbprmplugin.cc  hpprbprmplugin.hh  hppserverprocess.cc  hppserverprocess.hh
pyplugins/: CMakeLists.txt
pyplugins/gepetto/gui/affordance/: __init__.py  affordancewidget.py  rbprmEnvironments.conf  rbprmFullbodies.conf  rbprmRoms.conf
script/: loadhrp2stair.py  stair_path_hrp2.py
script/dynamic/: fullBodyPlayer.py  hrp2_wall_path.py  hyq_jumpEasy_interp.py  hyq_jumpEasy_path.py  wall_hrp2_interp.py
script/scenarios/: darpa_hyq_interp.py  darpa_hyq_path.py  profile.py  race_replanning_hrp2_1_interp.py  race_replanning_hrp2_1_path.py  race_replanning_hrp2_2_interp.py  race_replanning_hrp2_2_path.py  race_replanning_hrp2_3_interp.py  race_replanning_hrp2_3_path.py  race_replanning_hrp2_interp.py  race_replanning_hrp2_path.py  standing_hrp2_octree.py  standing_hrp2_path.py
script/scenarios/demos/: darpa_hyq_path.py
script/scenarios/demos/siggraph_asia/climbing/: climb_hrp2_interp.py
script/scenarios/demos/siggraph_asia/hyq_mountain/: mount_hyq.py
script/scenarios/demos/siggraph_asia/twister/: twister_hyq_hrp2.py  validity_twister_1
script/scenarios/sandbox/ANYmal/: anymal_slalom_debris.py
script/scenarios/sandbox/anymal_one_step/: anymal_circle_one_step.py  anymal_circle_one_step_path.py
script/tools/: pathToConfigs.py
script/tools/tro_capture_point/: gen_hrp2_statically_balanced_positions_ground_fixed_contacts.py
src/: CMakeLists.txt  rbprmbuilder.impl.cc  rbprmbuilder.impl.hh  rbprmbuilder.impl.hh.orig
src/hpp/corbaserver/rbprm/: fewstepsplanner.py  rbprmfullbody.py  rbprmfullbody.py.orig
